# i3ws

./: .gitignore  README.md  cabal.project  default.nix  flake.nix  i3ws.cabal  overlay.nix  shell.nix  stack.yaml
.github/workflows/: build.yml
app/: Main.hs
fa/: README.md  fa.cabal  generate.hs  package.yaml
fa/src/FontAwesome/: Icons.hs
i3ipc/: README.md  i3ipc.cabal  package.yaml
i3ipc/src/: I3.hs
i3ipc/src/I3/: Command.hs  IPC.hs  Internal.hs  Tree.hs  Workspaces.hs
i3ipc/test/: Main.hs
i3ipc/test/Test/: I3.hs  MockTree.hs
i3ws/: README.md  i3ws.cabal  package.yaml
i3ws/app/: Main.hs
i3ws/src/: I3WS.hs
i3ws/src/I3WS/: Types.hs  Utils.hs  Workspaces.hs
i3ws/test/Test/I3WS/: Mock.hs  Workspaces.hs
nix/: derivations.nix  nixpkgs.nix  packages.nix  utils.nix
src/: I3.hs  I3WS.hs  Main.hs
src/FontAwesome/: Icons.hs
src/Fontawesome/: Icons.hs
src/I3/: IPC.hs  Internal.hs  Tree.hs  Utils.hs  Workspaces.hs
src/i3/I3/: Command.hs  Workspaces.hs
test/: Main.hs
test/Test/I3/: Mock.hs  Workspaces.hs
test/Test/I3WS/: Mock.hs
