name:                i3ws
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/myme/i3ws#readme
license:             BSD3
license-file:        LICENSE
author:              Martin Myrseth
maintainer:          myrseth@gmail.com
copyright:           2019 Martin Myrseth
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable i3ws
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall
  other-modules:       I3
                     , I3.IPC
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , binary
                     , bytestring
                     , containers
                     , network
                     , process
