name:                i3ws
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/myme/i3ws#readme
license:             BSD3
license-file:        LICENSE
author:              Martin Myrseth
maintainer:          myrseth@gmail.com
copyright:           2019 Martin Myrseth
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library i3ws-lib
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
  exposed-modules:     I3
                     , I3.IPC
  build-depends:       base
                     , aeson
                     , binary
                     , bytestring
                     , containers
                     , network
                     , process

executable i3ws
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
                     , i3ws-lib

test-suite i3ws-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
                     , i3ws-lib
                     , hspec
                     , QuickCheck
