name:                fa
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/myme/i3ws#readme
license:             BSD3
license-file:        LICENSE
author:              Martin Myrseth
maintainer:          myrseth@gmail.com
copyright:           2019 Martin Myrseth
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src/
  default-language:    Haskell2010
  ghc-options:         -Wall
  exposed-modules:     FontAwesome.Icons
  build-depends:       base
