name:                i3ipc
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/myme/i3ws#readme
license:             BSD3
license-file:        LICENSE
author:              Martin Myrseth
maintainer:          myrseth@gmail.com
copyright:           2019 Martin Myrseth
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src/
  default-language:    Haskell2010
  ghc-options:         -Wall
  exposed-modules:     I3
                     , I3.IPC
                     , I3.Tree
                     , I3.Workspaces
  other-modules:       I3.Command
                     , I3.Internal
  build-depends:       base
                     , aeson
                     , binary
                     , bytestring
                     , containers
                     , network
                     , process
                     , text
                     , utf8-string
