cabal-version: 1.12

name:           i3ipc
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/myme/i3ws#readme>
homepage:       https://github.com/myme/i3ws#readme
bug-reports:    https://github.com/myme/i3ws/issues
author:         Martin Myrseth
maintainer:     @myme
copyright:      2019 Martin Myrseth
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/myme/i3ws

library
  exposed-modules:
      I3
      I3.Command
      I3.Internal
      I3.IPC
      I3.Tree
      I3.Workspaces
  other-modules:
      Paths_i3ipc
  hs-source-dirs:
      src/
  default-extensions: DeriveGeneric LambdaCase OverloadedStrings
  ghc-options: -Wall
  build-depends:
      aeson
    , base >=4.7 && <5
    , binary
    , bytestring
    , containers
    , network
    , process
    , text
    , utf8-string
    , vector
  default-language: Haskell2010

test-suite i3ipc-test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  other-modules:
      Test.I3
      Test.MockTree
      Paths_i3ipc
  hs-source-dirs:
      test
  default-extensions: DeriveGeneric LambdaCase OverloadedStrings
  ghc-options: -Wall
  build-depends:
      QuickCheck
    , aeson
    , base >=4.7 && <5
    , bytestring
    , hspec
    , i3ipc
  default-language: Haskell2010
