name:                i3ws
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/myme/i3ws#readme
license:             BSD3
license-file:        LICENSE
author:              Martin Myrseth
maintainer:          myrseth@gmail.com
copyright:           2019 Martin Myrseth
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src/
  default-language:    Haskell2010
  ghc-options:         -Wall
  exposed-modules:     I3WS
                     , I3WS.Workspaces
  build-depends:       base
                     , aeson
                     , binary
                     , bytestring
                     , containers
                     , fa
                     , i3ipc
                     , network
                     , process
                     , text
                     , utf8-string

executable i3ws-app
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
                     , i3ipc
                     , i3ws

test-suite i3ws-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall
  other-modules:       Test.I3WS.Mock
                     , Test.I3WS.Workspaces
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , i3ipc
                     , i3ws
                     , hspec
                     , QuickCheck
