cabal-version: 1.12

name:           i3ws
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/myme/i3ws#readme>
homepage:       https://github.com/myme/i3ws#readme
bug-reports:    https://github.com/myme/i3ws/issues
author:         Martin Myrseth
maintainer:     @myme
copyright:      2019 Martin Myrseth
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/myme/i3ws

library
  exposed-modules:
      I3WS
      I3WS.Types
      I3WS.Utils
      I3WS.Workspaces
  other-modules:
      Paths_i3ws
  hs-source-dirs:
      src/
  default-extensions: DeriveGeneric LambdaCase OverloadedStrings
  ghc-options: -Wall
  build-depends:
      aeson
    , base >=4.7 && <5
    , binary
    , bytestring
    , containers
    , exceptions
    , fa
    , i3ipc
    , network
    , process
    , text
    , transformers
    , utf8-string
  default-language: Haskell2010

executable i3ws
  main-is: Main.hs
  other-modules:
      Paths_i3ws
  hs-source-dirs:
      app/
  default-extensions: DeriveGeneric LambdaCase OverloadedStrings
  ghc-options: -Wall
  build-depends:
      base >=4.7 && <5
    , i3ipc
    , i3ws
    , optparse-applicative
  default-language: Haskell2010

test-suite i3ws-test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  other-modules:
      Test.I3WS.Mock
      Test.I3WS.Workspaces
      Paths_i3ws
  hs-source-dirs:
      test
  default-extensions: DeriveGeneric LambdaCase OverloadedStrings
  ghc-options: -Wall
  build-depends:
      QuickCheck
    , aeson
    , base >=4.7 && <5
    , bytestring
    , hspec
    , i3ipc
    , i3ws
  default-language: Haskell2010
